feat: #36 add financial product detail endpoint